--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@coral-xyz/common-public": "^0.2.0-latest.1931",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.17.2",
+    "@hxronetwork/parimutuelsdk": "^1.0.15",
     "@orca-so/common-sdk": "^0.1.5",
     "@orca-so/whirlpools-sdk": "^0.7.2",
     "@react-navigation/bottom-tabs": "6.3.1",
@@ -16,6 +17,7 @@
     "@react-navigation/native-stack": "6.6.1",
     "@react-navigation/stack": "6.2.1",
     "@solana/spl-token": "0.1.8",
+    "@solana/wallet-adapter-react": "^0.15.28",
     "@solana/web3.js": "^1.73.0",
     "decimal.js": "^10.4.3",
     "expo": "~47.0.8",
